<?xml version="1.0"?>
<package format="3">
  <name>calibration_manager</name>
  <version>1.0.0</version>
  <description>zoro version of Calibration Manager package</description>

  <maintainer email="chenzhe.qian@tusimple.ai">Chenzhe Qian, Yuyong Wang</maintainer>

  <license>TODO</license>

  <depend>ament_cmake</depend>
  <depend>octopus_api</depend>
  <depend>Boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
